<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="text_title">The Flying Coffee Bean</string>
    <string name="street">   356 Dream St</string>
    <string name="area">   Moon View, CA 13594</string>
    <string name="phone_num">158-867-2802</string>
    <string name="my_link"><a href="https://www.udacity.com/" >   www.flyingbeans.com</a></string>
    <string name="working">   Mon-Fri 08:00-22:00</string>
</resources>
