<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBg"
    tools:context="com.voutsadakis.stelios.helloandroid.MainActivity">

    <ImageView
        android:id="@+id/udacity_image"
        style="@style/imageView"
        android:src="@drawable/helloandroidjpg" />

    <TextView
        style="@style/titleView"
        android:id="@+id/udacity_title"
        android:layout_below="@id/udacity_image"
        android:text="@string/text_title" />

    <TextView
        style="@style/textView"
        android:id="@+id/udacity_street"
        android:layout_below="@id/udacity_title"
        android:drawableLeft="@drawable/crosshairsgps"
        android:text="@string/street" />

    <TextView
        style="@style/textView"
        android:id="@+id/udacity_area"
        android:layout_below="@id/udacity_street"
        android:drawableLeft="@drawable/mapmarker"
        android:text="@string/area"/>

    <TextView
        style="@style/textView"
        android:id="@+id/udacity_phone_num"
        android:layout_below="@id/udacity_area"
        android:drawableLeft="@drawable/cellphoneiphone"
        android:text="@string/phone_num"/>

    <TextView
        style="@style/textView"
        android:id="@+id/udacity_link"
        android:layout_below="@id/udacity_phone_num"
        android:autoLink="web"
        android:drawableLeft="@drawable/web"
        android:text="@string/my_link" />

</RelativeLayout>
